		 interesting scenario's were users want to prevent an ActivationException from being thrown when 
		 multiple delegates respond to the same ResolveUnregisteredType event. Publication of the property
		 allows users skip and continue when another delegate already registered that type.
		-New SimpleInjector.Extensions.Silverlight project was added (and supporting unit test project).
	
	Bug Fixes:
		-Bug fix in both the RegisterOpenGeneric and RegisterSingleOpenGeneric extension methods of the
		 Extensions.dll. The methods did not take generic type constraints into consideration. (work item 
		 16053).
		-Performance optimization in the RegisterOpenGeneric extension method in the Extensions.dll. Types
		 can now be resolved as quickly as types that are registered using a Func<T> delegate.
		-Bug fix in the RegisterSingleOpenGeneric extension method in the SimpleInjector.Extensions.dll. Due 
		 to a race condition, it was possible for this method to new up more instances of the same type.


Version 1.1.0.11142 (v1.1 RTM) 2011-05-22
	General description:
		This release fixes a small bug and adds a small feature to the core that allows the retrieval of
		IInstanceProvider types. The SimpleInjector.Extensions.dll builds upon this feature to improve 
		performance of the registrations made using the RegisterAll extension method. The extensions project
		also adds new RegisterManyForOpenGeneric that allow many more advanced scenario's.
	
	Code Changes:
		-RegisterSingle(Container, Type) method removed from NonGenericRegistrationsExtensions class in 
		 SimpleInjector.Extensions. Because of the C# overload resolution rules, the C# compiler never picked 
		 that method, but would always pick Container.RegisterSingle<Type>(Type), which would not yield the 
		 correct configuration. Removing this method is a breaking change of the SimpleInjector.Extensions 
		 library, but users will unlikely be affected by this.